--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,7 +68,7 @@ button {
 
 #menu {
     text-transform: uppercase;
-    font-size: 16pt
+    font-size: 16pt;
 }
 
 li:hover {
@@ -94,4 +94,10 @@ footer {
 
 #vermais:hover {
     box-shadow: 0px 0px 0px 0px #363636;
+}
+
+@media (min-width: 500px) and (max-width: 1200px) {
+    body {
+        background: blue !important;
+    }
 }
