--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?67940226');
-  src: url('../font/fontello.eot?67940226#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?67940226') format('woff2'),
-       url('../font/fontello.woff?67940226') format('woff'),
-       url('../font/fontello.ttf?67940226') format('truetype'),
-       url('../font/fontello.svg?67940226#fontello') format('svg');
+  src: url('../font/fontello.eot?8414678');
+  src: url('../font/fontello.eot?8414678#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?8414678') format('woff2'),
+       url('../font/fontello.woff?8414678') format('woff'),
+       url('../font/fontello.ttf?8414678') format('truetype'),
+       url('../font/fontello.svg?8414678#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?67940226#fontello') format('svg');
+    src: url('../font/fontello.svg?8414678#fontello') format('svg');
   }
 }
 */
@@ -57,7 +57,10 @@
  
 .icon-emo-happy:before { content: '\e800'; } /* '' */
 .icon-heart-filled:before { content: '\e801'; } /* '' */
+.icon-right-bold:before { content: '\e802'; } /* '' */
+.icon-right:before { content: '\e803'; } /* '' */
 .icon-emo-thumbsup:before { content: '\e804'; } /* '' */
 .icon-emo-squint:before { content: '\e811'; } /* '' */
 .icon-emo-laugh:before { content: '\e812'; } /* '' */
 .icon-emo-wink2:before { content: '\e813'; } /* '' */
+.icon-right-1:before { content: '\f178'; } /* '' */
