--- a/css/form.css
+++ b/css/form.css
@@ -10,19 +10,32 @@ body {
     /* background-repeat: no-repeat;*/
 }
 
+li:hover {
+    box-shadow: 0px 0px 0px #F8F8FF;
+    background-color: #696969;
+    color: white;
+    text-shadow: 2px 2px 5px white;
+}
+
+.dropdown-item:hover {
+    background-color: #415564de;
+    color: white;
+}
+
 #h2formulas {
     color: white;
     /*text-shadow: 3px 3px 5px #A4A4A4;*/
-    border-radius: 15px 15px 15px 15px;
     border: 1px solid grey;
     text-align: center;
     font-family: Bradley Hand, cursive;
     background-color: #4d7887;
+    border-radius: 2.1em;
 }
 
 #formularioMRU {
     border-radius: 10px;
-    background: #F8F8FF !important;
+    /*background: #F8F8FF !important;*/
+    background-color: #d7d7ea;
     padding-top: 1em;
     padding-bottom: 1em;
 }
