--- a/css/perfil.css
+++ b/css/perfil.css
@@ -51,3 +51,38 @@ body {
 #menu {
     font-size: 16pt;
 }
+
+.dropdown-item:hover {
+    background-color: #284254de;
+    color: white;
+    text-shadow: 2px 2px 3px white;
+    border-radius: 10px 10px 10px 10px;
+}
+
+li:hover {
+    box-shadow: 0px 0px 0px #F8F8FF;
+    background-color: #696969;
+    color: white;
+    text-shadow: 2px 2px 5px white;
+    border-radius: 10px 10px 10px 10px;
+}
+
+.dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 10rem;
+    padding: 0.5rem 0;
+    margin: 0.125rem 0 0;
+    font-size: 1rem;
+    color: #212529;
+    text-align: left;
+    list-style: none;
+    background-color: #d7d7ea;
+    background-clip: padding-box;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 0.25rem;
+}
