formula campo eletrico

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -33,7 +33,6 @@ form {
 
 #aviso2 {
     text-shadow: 1px 5px 8px grey;
-    text-align: ;
     color: #374858;
     font-size: 14pt;
 }
@@ -75,27 +74,35 @@ button {
     padding: 2.5em;
 }
 
-
-}
-#menu {
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255, 255, 255, 0.5);
     font-size: 16pt;
 }
+
+
+/*#menu {
+    font-size: 20pt;
+}*/
+
 li:hover {
     box-shadow: 0px 0px 0px #F8F8FF;
     background-color: #696969;
     color: white;
     text-shadow: 2px 2px 5px white;
 }
+
 .dropdown-item:hover {
     background-color: #415564de;
     color: white;
     text-shadow: 2px 2px 3px white;
 }
+
 footer {
     border-radius: 0.1em;
     color: #d7d7ea;
     background-color: #343a40;
 }
+
 #vermais {
     background: #284254;
     border-radius: 0.9em;
@@ -109,6 +116,7 @@ footer {
     -o-transition: 0.3s linear;
     transition: 0.3s linear;
 }
+
 #vermais:hover {
     opacity: 0.8;
     background: #284254;
@@ -123,6 +131,7 @@ footer {
     -o-transition: 0.3s linear;
     transition: 0.3s linear;
 }
+
 #formula {
     text-decoration: none;
     font-size: 35pt;
@@ -131,6 +140,7 @@ footer {
     padding: 3px;
     margin: 3px;
 }
+
 
 /*#formula:hover {
     text-decoration: none;
@@ -143,6 +153,7 @@ footer {
     -o-transition: 0.3s linear;
     transition: 0.3s linear;
 }*/
+
 #formulaSemHover {
     text-decoration: none;
     font-size: 35pt;
@@ -151,33 +162,40 @@ footer {
     padding: 3px;
     margin: 3px;
 }
+
 #boxFormula {
     width: 100px;
     padding: 10px;
     border-radius: 3px;
     border: 1px solid;
 }
+
 #txtDestaque {
     text-shadow: 2px 2px 5px gray;
     font-size: 20pt;
     color: #264052;
 }
+
 #txtDestaque2 {
     background-color: #8db4b5;
     border-radius: 20px;
     border: black;
 }
+
 #txtDestaque3 {
     color: #a6c6c7;
 }
+
 #formularioMRU {
     background: #F8F8FF !important;
     padding-top: 1em;
     padding-bottom: 1em;
 }
+
 #text-conteudo {
     text-align: justify;
 }
+
 .btn-outline-secondary {
     color: #374858;
     background-color: transparent;
@@ -185,6 +203,7 @@ footer {
     border-color: #374858;
     border-radius: 1.1em;
 }
+
 .btn-outline-secondary:hover {
     color: #acbfcc;
     background-color: #374858;
@@ -192,6 +211,7 @@ footer {
     border-color: #374858;
     border-radius: 1.1em;
 }
+
 .dropdown-menu {
     position: absolute;
     top: 100%;
@@ -211,6 +231,7 @@ footer {
     border: 1px solid rgba(0, 0, 0, 0.15);
     border-radius: 0.25rem;
 }
+
 .img-thumbnail {
     padding: 0.25rem;
     background-color: #284254;
@@ -220,10 +241,12 @@ footer {
     height: auto;
     border-radius: 1.1em;
 }
+
 #btnlogin,
 #btncadastro {
     width: 450px;
 }
+
 h1 {
     text-shadow: 2px 5px 5px grey;
 }
