--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,66 +1,157 @@
 @font-face {
-  font-family: 'fontello';
-  src: url('../font/fontello.eot?8414678');
-  src: url('../font/fontello.eot?8414678#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?8414678') format('woff2'),
-       url('../font/fontello.woff?8414678') format('woff'),
-       url('../font/fontello.ttf?8414678') format('truetype'),
-       url('../font/fontello.svg?8414678#fontello') format('svg');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'fontello';
+    src: url('../font/fontello.eot?34494436');
+    src: url('../font/fontello.eot?34494436#iefix') format('embedded-opentype'), url('../font/fontello.woff2?34494436') format('woff2'), url('../font/fontello.woff?34494436') format('woff'), url('../font/fontello.ttf?34494436') format('truetype'), url('../font/fontello.svg?34494436#fontello') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
+
+
 /* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+
+
 /* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+
+
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?8414678#fontello') format('svg');
+    src: url('../font/fontello.svg?34494436#fontello') format('svg');
   }
 }
 */
- 
- [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: none;
- 
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
- 
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
- 
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
- 
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+    font-family: "fontello";
+    font-style: normal;
+    font-weight: normal;
+    speak: none;
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    /* opacity: .8; */
+    /* For safety - reset parent styles, that can break glyph codes*/
+    font-variant: normal;
+    text-transform: none;
+    /* fix buttons height, for twitter bootstrap */
+    line-height: 1em;
+    /* Animation center compensation - margins should be symmetric */
+    /* remove if not needed */
+    margin-left: .2em;
+    /* you can be more comfortable with increased icons size */
+    /* font-size: 120%; */
+    /* Font smoothing. That was taken from TWBS */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    /* Uncomment for 3D effect */
+    /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
-.icon-emo-happy:before { content: '\e800'; } /* '' */
-.icon-heart-filled:before { content: '\e801'; } /* '' */
-.icon-right-bold:before { content: '\e802'; } /* '' */
-.icon-right:before { content: '\e803'; } /* '' */
-.icon-emo-thumbsup:before { content: '\e804'; } /* '' */
-.icon-emo-squint:before { content: '\e811'; } /* '' */
-.icon-emo-laugh:before { content: '\e812'; } /* '' */
-.icon-emo-wink2:before { content: '\e813'; } /* '' */
-.icon-right-1:before { content: '\f178'; } /* '' */
+
+.icon-down-hand:before {
+    content: '\e800';
+}
+
+
+/* '' */
+
+.icon-down-open-big:before {
+    content: '\e801';
+}
+
+
+/* '' */
+
+.icon-emo-happy:before {
+    content: '\e802';
+}
+
+
+/* '' */
+
+.icon-emo-wink:before {
+    content: '\e803';
+}
+
+
+/* '' */
+
+.icon-ok:before {
+    content: '\e804';
+}
+
+
+/* '' */
+
+.icon-down-open:before {
+    content: '\e805';
+}
+
+
+/* '' */
+
+.icon-right-big:before {
+    content: '\e808';
+}
+
+
+/* '' */
+
+.icon-emo-laugh:before {
+    content: '\e812';
+}
+
+
+/* '' */
+
+.icon-user-female:before {
+    content: '\f063';
+}
+
+
+/* '' */
+
+.icon-angle-double-down:before {
+    content: '\f103';
+}
+
+
+/* '' */
+
+.icon-frown:before {
+    content: '\f119';
+}
+
+
+/* '' */
+
+.icon-down:before {
+    content: '\f175';
+}
+
+
+/* '' */
+
+.icon-right:before {
+    content: '\f178';
+}
+
+
+/* '' */
+
+.icon-facebook:before {
+    content: '\f300';
+}
+
+
+/* '' */
+
+.icon-instagram:before {
+    content: '\f31e';
+}
+
+
+/* '' */
