--- a/css/form.css
+++ b/css/form.css
@@ -117,3 +117,8 @@ li:hover {
     -o-transition: 0.3s linear;
     transition: 0.3s linear;
 }
+
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 16pt;
+}
